Remove extraneous export.